===========================================================================

3.9 to 3.9.1: (XXXX xx, 2013)

  * Several bugfixes and improvements to the debugger:
      - Fixed bug in disassembly when the mirror used for the current
        PC didn't match the mirror for the current bank.  In this case,
        the disassembler became confused and didn't properly track the
        PC address.

      - Changed display for various TIA position counters to decimal
        (from hex) in the TIA tab.  Related to this, all data input
        widgets in the UI now have the ability to enter binary,
        decimal or hex values by using the proper leading character
        (\, #, $, respectively).

      - Added 'INTIM Clks' to the 'I/O' tab. which shows the number of
        clocks between each 'step' of the INTIM timer.

      - Added ability to modify 'tiadriven' commandline argument to the
        'TIA' tab, and 'ramrandom' to the 'I/O' tab.  These options were
        available for quite some time, but they weren't exposed in the UI.

      - Added 'cpurandom' commandline argument, and associated UI item
        to the 'I/O' tab.  This works similar to 'ramrandom', and
        randomizes the contents of the CPU registers on ROM startup.

      - Added 'uhex' debugger prompt command, which toggles all
        hexadecimal display between upper/lower case.  This setting is
        also saved in the settings file as argument 'dbg.uhex'.

  * For the Linux/UNIX port:
      - Fixed bug whereby a maximize button was always present in the
        window title bar.  Stella could not be expanded in this way,
        so the button was removed.

      - Added Startup notification protocol patch to the .desktop
        file from Dan Fandrich.

  * Updated included PNG library to latest stable version.

-Have fun!


3.8.1 to 3.9: (June 27, 2013)

  * Greatly extended functionality of the debugger disassembly:
      - There is now a new tab which lists information specific to the